# HOI4-Code-Studio

./: .env.example  .gitignore  CODE_QUALITY_IMPROVEMENTS.md  LICENSE  PROMPT  README.md  Version  ask_continue_http.ps1  index.html  package-lock.json  package.json  package.json.test-commands  playwright.config.ts  project_rules.md  tailwind.config.js  test_focus_tree.txt  vite.config.ts  vitest.config.ts
.github/workflows/: frontend-tests.yml  test.yml
docs/: README.md
docs/API/: QUICK_REFERENCE.md  README.md
docs/Backend/: CustomJSONParser.md  Libs.md
docs/Frontend/: CreateProject.md  OpenProject.md  RecentProjects.md  Settings.md  Themes.md
docs/Testing/: README.md
sample-plugins/hoics-sample-plugin-hello/: About.hoics  README.md  index.html
sample-plugins/hoics-sample-plugin-themes/: About.hoics  index.html
scripts/: README.md  update-version.js
src/: App.vue  highlightjs.d.ts  prismjs.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bracket_matcher.rs  country_tags.rs  dependency.rs  file_tree.rs  focus_localization.rs  gui_engine.rs  idea_registry.rs  json_decoder.rs  lib.rs  main.rs  map_engine.rs  mio_parser.rs  modifier.txt  plugin_manager.rs  tag_validator.rs  theme_manager.rs
src-tauri/src/tests/: file_tree_tests.rs  mod.rs  tag_validator_tests.rs
src/api/: tauri.ts
src/components/: ChangelogPanel.vue  FileTreeNode.vue  IconPanel.vue  ThemePanel.vue
src/composables/: useAiChat.ts  useDependencyManager.ts  useEditorFont.ts  useEditorGroups.ts  (+20 more)
(+168 files in other folders)
