[package]
name = "hoi4-code-studio"
version = "2026.1.26-dev"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hoi4_code_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2.5.3", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6.0.0"
rfd = "0.15"
rayon = "1.10"
regex = "1.11"
encoding_rs = "0.8"
chardetng = "0.1"
once_cell = "1.19"
zip = "6.0.0"
walkdir = "2.4"
base64 = "0.22"
image = { version = "0.25.9", features = ["tga", "jpeg", "png", "bmp", "webp"] }
image_dds = "0.7.2"
memmap2 = "0.9"

[dev-dependencies]
mockall = "0.13"
tempfile = "3"
rstest = "0.21"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockall_double = { version = "0.3" }
